--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
     body {
       font-family: 'Poppins', sans-serif;
@@ -16,28 +18,27 @@
       overflow-x: hidden;
     }
     header {
-      position: relative;
       background: linear-gradient(135deg, #1e3c72, #2a5298);
       text-align: center;
       padding: 80px 20px;
+      position: relative;
       overflow: hidden;
-      color: white;
     }
     header::before {
       content: "";
       position: absolute;
-      top: 10px; /* un peu plus bas */
+      top: 30px; /* image un peu plus bas */
       left: 50%;
       transform: translateX(-50%);
       width: 100%;
-      height: 250px;
-      background: url('img/back.jpg') center center no-repeat;
-      background-size: cover;
-      opacity: 0.4;
+      height: 200px;
+      background: url('img/back.jpg') no-repeat center center/cover;
+      opacity: 0.3;
       filter: none; /* image nette */
       z-index: 0;
     }
-    header h1, header p {
+    header h1,
+    header p {
       position: relative;
       z-index: 1;
     }
@@ -66,13 +67,15 @@
       max-width: 1200px;
       margin: auto;
     }
-    .services, .gallery {
+    .services,
+    .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
       margin-top: 40px;
     }
-    .card, .gallery img {
+    .card,
+    .gallery img {
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.6s ease, transform 0.6s ease;
@@ -85,89 +88,110 @@
       background: #1f2b45;
       padding: 25px;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
     .gallery img {
       width: 100%;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
       cursor: pointer;
       transition: transform 0.3s ease;
     }
     .gallery img:hover {
       transform: scale(1.05);
     }
+    /* Lightbox styles */
+    #lightbox {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+    }
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 12px;
+    }
+    #lightbox:target {
+      display: flex;
+    }
+    /* Avis Clients */
+    #avis {
+      background: #151e35;
+      padding: 40px 20px;
+    }
+    .avis-container {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .avis-item {
+      background: #1f2b45;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      display: flex;
+      gap: 20px;
+      align-items: flex-start;
+    }
+    .avis-item img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+    .avis-text {
+      flex: 1;
+    }
+    .stars {
+      color: gold;
+      margin: 10px 0 5px 0;
+      font-size: 18px;
+    }
+    /* Contact */
+    #contact p {
+      margin: 8px 0;
+    }
+    #contact a {
+      color: #1abc9c;
+      text-decoration: none;
+    }
+    #contact a:hover {
+      text-decoration: underline;
+    }
+    /* Footer */
     footer {
       background: #111831;
       color: #aaa;
       text-align: center;
       padding: 25px;
       margin-top: 50px;
-      font-size: 0.9rem;
     }
-    #avis {
-      background: #151e35;
-      overflow: hidden;
-      position: relative;
-      padding-bottom: 60px;
-    }
-    .avis-marquee {
-      display: flex;
-      gap: 40px;
-      padding: 20px;
-      animation: scrollAvis 30s linear infinite; /* vitesse un peu accélérée */
-    }
-    .avis-item {
-      min-width: 300px;
-      max-width: 300px;
-      background: #1f2b45;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .avis-item img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-      object-fit: cover;
-    }
-    .stars {
-      color: gold;
-      margin-top: 10px;
-      font-size: 1.2em;
-    }
-    .avis-item p {
-      flex-grow: 1;
-      margin-bottom: 12px;
-      white-space: normal;
-      word-wrap: break-word;
-    }
-    .avis-item small {
-      font-style: italic;
-      color: #ccc;
-      margin-top: 8px;
-    }
-    @keyframes scrollAvis {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
+    /* Media queries */
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
         gap: 10px;
       }
-      .avis-marquee {
-        flex-direction: column;
-        animation: none;
-      }
       .avis-item {
-        margin-bottom: 20px;
-        max-width: 100%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .avis-item img {
+        margin-bottom: 10px;
+      }
+      .avis-text {
+        flex: none;
       }
     }
   </style>
@@ -206,62 +230,56 @@
   <section class="section" id="realisations">
     <h2>Réalisations</h2>
     <div class="gallery">
-      <img src="img/bois.jpg" alt="Terrasse bois" />
-      <img src="img/house.jpg" alt="Maison avec terrasse" />
-      <img src="img/terasse.jpg" alt="Terrasse moderne" />
+      <a href="#img1"><img src="img/bois.jpg" alt="Bois" /></a>
+      <a href="#img2"><img src="img/house.jpg" alt="House" /></a>
+      <a href="#img3"><img src="img/terasse.jpg" alt="Terrasse" /></a>
     </div>
-    <p style="text-align: center; margin-top: 20px;">
-      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank" style="color:#1abc9c; text-decoration:none; font-weight:600; display: inline-flex; align-items: center; gap: 8px;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" style="width: 24px; height: 24px;" />
+
+    <!-- Lightbox images -->
+    <div id="img1" class="lightbox" style="display:none;">
+      <a href="#_" onclick="document.getElementById('img1').style.display='none';return false;" style="position: fixed;top:10px;right:20px;color:#fff;font-size:40px;text-decoration:none;z-index:3000;">&times;</a>
+      <img src="img/bois.jpg" alt="Bois" />
+    </div>
+    <div id="img2" class="lightbox" style="display:none;">
+      <a href="#_" onclick="document.getElementById('img2').style.display='none';return false;" style="position: fixed;top:10px;right:20px;color:#fff;font-size:40px;text-decoration:none;z-index:3000;">&times;</a>
+      <img src="img/house.jpg" alt="House" />
+    </div>
+    <div id="img3" class="lightbox" style="display:none;">
+      <a href="#_" onclick="document.getElementById('img3').style.display='none';return false;" style="position: fixed;top:10px;right:20px;color:#fff;font-size:40px;text-decoration:none;z-index:3000;">&times;</a>
+      <img src="img/terasse.jpg" alt="Terrasse" />
+    </div>
+
+    <p style="text-align:center; margin-top: 20px;">
+      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank" style="color:#1abc9c; text-decoration:none; font-weight:bold; display:inline-flex; align-items:center; gap:8px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="width:24px; height:auto;">
         Pour plus de photos
       </a>
     </p>
   </section>
 
   <section class="section" id="avis">
-    <h2>Avis Clients</h2>
-    <div class="avis-marquee" aria-label="Avis clients en défilement">
-      <div class="avis-item">
-        <img src="img/clientAlex.webp" alt="Alex" />
-        <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
-        <div class="stars">★★★★★</div>
-        <small>- Alex</small>
-      </div>
-
-      <div class="avis-item">
-        <p>Réalisation de notre terrasse de 120m2 pose de dalles 30x120 sur plots.<br>
-        Artisan très minutieux et très soucieux de la satisfaction client.<br>
-        Nous sommes très satisfaits du rendu de la terrasse.<br>
-        Nous recommandons cet artisan pour la pose de terrasse.</p>
-        <div class="stars">★★★★★</div>
-        <small>- Alexandre Oliveira</small>
-      </div>
-
-      <div class="avis-item">
-        <p>Projet d’une terrasse en dalles carrelage de 42m².<br>
-        Me Construction a été à l’écoute de notre projet !<br>
-        Et nous a conseillé sur le type de dalles à acheter avec une super promotion en magasin !<br>
-        Livrée une semaine plus tard…<br>
-        Me Construction a parfaitement réalisé cette terrasse dans un temps record !<br>
-        Il nous aurait fallu sûrement le double d’heure de travail pour réaliser cette prestation…. Et sûrement pas au niveau de rendu de ME CONSTRUCTION !<br>
-        Nous sommes vraiment ravis de cet ouvrage :)<br>
-        Prêt pour profiter des premiers rayons de soleil.<br>
-        MERCI ME CONSTRUCTION !!!!<br>
-        ALLEZ Y LES YEUX FERMÉS…</p>
-        <div class="stars">★★★★★</div>
-        <small>- Florian Moine</small>
-      </div>
+  <h2>Avis Clients</h2>
+  <div class="avis-marquee">
+    <div class="avis-item">
+      <img src="img/clientAlex.webp" alt="Alex">
+      <p>Travail précis et de qualité, ponctuel, à l'écoute, prix compétitif. Je suis très très satisfait du travail réalisé. Contactez-les les yeux fermés !</p>
+      <div class="stars">★★★★★</div>
+      <small>- Alex</small>
     </div>
-  </section>
+    <div class="avis-item">
+      <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet !  
+      Et nous a conseillé sur le type de dalles a acheter avec une super promotion en magasin !  
+      Livrée une semaine plus tard…  
+      Me Construction à parfaitement réalisé cette terrasse dans un temps record !  
+      Il nous aurait fallu sûrement le double d’heure de travail pour réaliser cette prestation….  
+      Et sûrement pas au niveau de rendu de ME CONSTRUCTION !  
+      Nous sommes vraiment ravis de cet ouvrage :)  
+      Prêt pour profiter des premiers rayons de soleil  
+      MERCI ME CONSTRUCTION !!!!  
+      ALLEZ Y LES YEUX FERMÉS…</p>
+      <div class="stars">★★★★★</div>
+      <small>- Florian Moine</small>
+    </div>
+  </div>
+</section>
 
-  <footer id="contact">
-    <p>Téléphone : <a href="tel:+33676553748" style="color:#1abc9c; text-decoration:none;">06 76 55 37 48</a> | Email : <a href="mailto:Me.construction@outlook.fr" style="color:#1abc9c; text-decoration:none;">Me.construction@outlook.fr</a></p>
-    <p>
-      <a href="https://www.facebook.com/people/Me-construction/100066785978290/" target="_blank" style="color:#1abc9c; text-decoration:none; font-weight:600; display: inline-flex; align-items: center; gap: 8px; justify-content: center;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" style="width: 24px; height: 24px;" />
-        Facebook ME Construction
-      </a>
-    </p>
-  </footer>
-</body>
-</html>
